# poc-plugin-linking

./: .gitignore  CMakeLists.txt  LICENCE.txt
linking_interface/include/: lnk_interface.h
main_exec/include/: LnkInterfaceImpl.h
main_exec/src/: LnkInterfaceImpl.cc  main.cc
sub_plugin/include/: plugin_impl.h
sub_plugin/src/: plugin_impl.cc
